--- a/Pacifice-Website/Pacifice-Website.csproj
+++ b/Pacifice-Website/Pacifice-Website.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Admin\Views\" />
+    <Folder Include="Controllers\" />
     <Folder Include="ViewModel\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
